# dmp-project

./: .dvcignore  .env.example  .envrc  .gitattributes  .gitignore  README.md  USER_GUIDE.md  USER_MANAGEMENT_IDEA.md  alembic.ini  assets-page-redesign.md  data.dvc  docker-compose.yml  package-lock.json  pyproject.toml  setup  shell.nix  week2-tasks.md
.dvc/: config
.githooks/: pre-push
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  GEMINI.md  alembic.ini  entrypoint.sh
backend/alembic/: env.py
backend/alembic/versions/: 20260611_0001_initial_schema.py  (+1 more)
backend/src/: database.py  main.py  models.py  schemas.py  seeder.py  tasks.py
backend/tests/: conftest.py
docs/architecture/: portability-implementation-plan.md  portability.md
docs/testing/: frontend-testing-plan.md
forecasting_module/: __init__.py  config.py  dataset_builder.py  feature_engineering.py  forecaster.py  ingestion.py  outlier.py  pipeline.py  preprocessing.py  validation.py
forecasting_module/docs/: dataset_builder.md  feature-engineering-phase.md  forecasting_pipeline_update_notes.md  handling_missing_data.md  nextphase.md  training.md
frontend/: .gitignore  Dockerfile  README.md  docker-entrypoint.sh  eslint.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.test.json  tsconfig.tsbuildinfo  vitest.config.ts
mlflow/: Dockerfile
notebooks/anomaly-detection/: 01_stage1_data_quality_anomalies.ipynb  02_stage2_baseline_feature_engineering.ipynb  03_stage3_residual_anomaly_detection.ipynb  04_stage4_minimal_weather.ipynb  05_stage5_injection_benchmark.ipynb  06_stage6_event_aggregation.ipynb  07_stage7_no_building_id.ipynb  08_stage8_full_pipeline.ipynb  eda.ipynb  mlflow.db
notebooks/forecasting/: Notebook_Training_Corr.ipynb  Training_notebooks_forecast.ipynb  Training_notebooks_v2.ipynb  benchmark_training_evaluation.ipynb  benchmark_training_evaluation_optimized_(1).ipynb
notebooks/prediction/: 01_baseline_energy_prediction.ipynb
scripts/: upload_huggingface.py
(+185 files in other folders)
