[project]
name = "dmp-smart-city-prediction"
version = "0.1.0"
description = "Energy, water, runtime, and alarm prediction models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core Data & ML
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.3",       
    "statsmodels>=0.14.2",  

    # Data Validation
    "pandera>=0.19.0",      

    # MLOps & DB
    "mlflow>=2.13.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.30",  

    # API & Config
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.1", 

    # Background Tasks & Caching
    "celery>=5.4.0",       
    "redis>=5.0.4",       

    # Visualization & Dev
    "plotly>=5.22.0",    
    "jupyterlab>=4.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.0",
    "dvc[gdrive]>=3.51.2",
    "dvc-gdrive>=3.0.1",
    "pyopenssl>=24.0.0",
    "testcontainers[postgres]>=4.0.0",
]
